--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   equatable: ^2.0.0
   multiple_result: ^5.0.0
+  bloc: ^8.0.0
+  flutter_bloc: ^8.0.0
 
 dev_dependencies:
   flutter_test:
