--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   bloc: ^8.0.0
   flutter_bloc: ^8.0.0
   get_it: ^7.6.0
+  injectable: ^2.1.2
 
 dev_dependencies:
   flutter_test:
@@ -26,6 +27,8 @@ dev_dependencies:
   flutter_lints: ^2.0.0
   mocktail: ^0.3.0
   bloc_test: ^9.1.3
+  build_runner: ^2.4.5
+  injectable_generator: ^2.1.2
 
 flutter:
   uses-material-design: true
